cmake_minimum_required(VERSION 3.25)
project(problem_soving__leet_code_)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(problem_soving__leet_code_
       add-two-integers/add-two-integers.cpp add-two-integers/add-two-integers.cpp add-two-integers/add-two-integers.cpp add-two-integers/add-two-integers.cpp add-two-integers/add-two-integers.cpp)
